[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/singletons/CameraControllerWithDevTools/ShakeControls/ShakeControls.gd" type="Script" id=1]
[ext_resource path="res://src/singletons/CameraControllerWithDevTools/ShakeControls/ShakeControlsFont.tres" type="DynamicFont" id=2]

[node name="ShakeControls" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_top = 164.0
margin_right = 320.0
margin_bottom = 178.0
size_flags_horizontal = 0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -98.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 98.0
margin_bottom = 180.0

[node name="ShakeLock" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 98.0
margin_bottom = 24.0
alignment = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ShakeLock"]
margin_left = 22.0
margin_top = 3.0
margin_right = 70.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 2 )
text = "Shake Lock"

[node name="CheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/ShakeLock"]
margin_left = 74.0
margin_right = 98.0
margin_bottom = 24.0

[node name="Noise" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 98.0
margin_bottom = 52.0
alignment = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Noise"]
margin_left = 46.0
margin_top = 3.0
margin_right = 70.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 2 )
text = "Noise"

[node name="CheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/Noise"]
margin_left = 74.0
margin_right = 98.0
margin_bottom = 24.0

[node name="Tween" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 98.0
margin_bottom = 80.0
alignment = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Tween"]
margin_left = 43.0
margin_top = 3.0
margin_right = 70.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 2 )
text = "Tween"

[node name="CheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/Tween"]
margin_left = 74.0
margin_right = 98.0
margin_bottom = 24.0

[node name="Rotation" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 98.0
margin_bottom = 108.0
alignment = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Rotation"]
margin_left = 31.0
margin_top = 3.0
margin_right = 70.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 2 )
text = "Rotation"

[node name="CheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/Rotation"]
margin_left = 74.0
margin_right = 98.0
margin_bottom = 24.0

[node name="Offset" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 112.0
margin_right = 98.0
margin_bottom = 136.0
alignment = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Offset"]
margin_left = 41.0
margin_top = 3.0
margin_right = 70.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 2 )
text = "Offset"

[node name="CheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/Offset"]
margin_left = 74.0
margin_right = 98.0
margin_bottom = 24.0
[connection signal="toggled" from="MarginContainer/VBoxContainer/ShakeLock/CheckBox" to="." method="_on_ShakeLock_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Noise/CheckBox" to="." method="_on_Noise_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Tween/CheckBox" to="." method="_on_Tween_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Rotation/CheckBox" to="." method="_on_Rotation_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Offset/CheckBox" to="." method="_on_Offset_toggled"]
